--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="icon">
                 <ion-icon name="person"></ion-icon>
             </span>
-            <input type="text" placeholder="Nume utilizator" required>
+            <input type="text"  required>
             <label>username</label>
         </div>
         <div class="input-box">
@@ -99,4 +99,5 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
